<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/warung_makan_ajaib"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/menu_makanan"
        android:textSize="20sp"
        />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/menu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nasi_goreng"
            />
        <RadioButton
            android:id="@+id/menu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mie_goreng"
            />
        <RadioButton
            android:id="@+id/menu3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mie_rebus"
            />
        <RadioButton
            android:id="@+id/menu4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nasi_uduk"
            />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/menu_minuman"
        android:textSize="20sp"
        />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/minum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teh_es"
            />

        <RadioButton
            android:id="@+id/minum2"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/es_jeruk"
            />
    </RadioGroup>

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_porsi"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlah_porsi"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pesan"/>
</LinearLayout>